# sysworxx-io

./: .gitignore  .gitlab-ci.yml  CVE_REPORT.md  Cargo.toml  Cross.toml  README.md
Bindings/CSharp/Demo/: Program.cs
Bindings/CSharp/Runlight/: Program.cs
Bindings/CSharp/SysworxxIo/: SysworxxIo.cs
Bindings/CSharp/SysworxxIoCsbindgen/: Cargo.toml  build.rs
Bindings/Codesys/: Cargo.toml
Bindings/node-red-contrib-sysworxx-io/: package-lock.json  package.json
Bindings/node-red-contrib-sysworxx-io/src/nodes/: sysworxx_di.ts  sysworxx_run_switch.ts
Bindings/sysworxx-io-js/: Cargo.toml  package-lock.json  package.json
Bindings/sysworxx-io-js/src/: lib.rs
Bindings/sysworxx-io-py/: Cargo.toml  README.md  pyproject.toml  sysworxx_io_py.pyi
Bindings/sysworxx-io-py/scripts/: demo.py
Bindings/sysworxx-io-py/src/: lib.rs  result.rs  types.rs
ctr700drv/: Cargo.toml
docker/: Dockerfile
src/: ffi.rs  lib.rs  periodic.rs  shm.rs
src/convert/: tc.rs  util.rs
src/definition/: ctr500.rs  ctr600.rs  ctr700.rs  ctr750.rs  ctr800.rs  fallback.rs  mod.rs  pi.rs
src/io/: am62x.rs  evdev.rs  iio.rs  null.rs  sensors.rs  sysfs.rs
