[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = 'sysworxx-io-py'
description = "Python bindings to syswoxx-io"
version = "2.3.0"
requires-python = '>=3.8'
authors = [
    { name = 'Andreas Dinter', email = 'andreas.dinter@systec-electronic.com' },
]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Rust',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
]

[dependency-groups]
dev = ["maturin"]

[tool.maturin]
features = ["pyo3/extension-module"]
