[package]
name = "SysworxxIoCsbindgen"
version = "2.2.0"
authors = ["Andreas Dinter"]
edition = "2021"
license = "LGPL-3.0-or-later"
homepage = "https://www.systec-electronic.com"
description = "C# bindings to sysworxx-io"

[lib]
crate-type = ["cdylib"]

[dependencies]

[build-dependencies]
csbindgen = "1.9.3"
